PyMaker/datas/object2/RawHTML/i14501/Python_DOC_referPages.syntax-error-with-cloud-9.txt
<div class="post-text" itemprop="text">
<p>I'm new to Cloud 9, and have made a script. I want the code to appear at the url <a href="https://python-william1835.c9.io" rel="nofollow">https://python-william1835.c9.io</a> and I receive the following message:</p>
<pre><code>Important: use os.getenv(PORT, 8080) as the port and os.getenv(IP,0.0.0.0) as the host in your scripts!
</code></pre>
<p>when I run it. </p>
<p>So I put it in the script (along with <code>import os</code> of course). And when I run it again, it says:                                                              </p>
<pre><code>File "/home/ubuntu/workspace/Python Projects/Python Enigma Program/main.py", line 14                                                                                
os.getenv(IP, 0.0.0.0)                                                                                                                                            
                  ^                                                                                                                                               
SyntaxError: invalid syntax
</code></pre>
<p>Can you tell me why it does this?</p>
</div>
<div class="post-text" itemprop="text">
<p>You get a <code>SyntaxError</code> because the literal <code>0.0.0.0</code> is syntactically invalid. </p>
<p>The message you're receiving is a bit misleading in this specific case. Additionally, the documentation page for <code>os.getenv</code> <em><a href="https://docs.python.org/3/library/os.html#os.getenv" rel="nofollow">is unfortunately not as verbose as one would want</a></em>.</p>
<p>But, if you look at the <em><a href="https://hg.python.org/cpython/file/3.5/Lib/os.py#l814" rel="nofollow">source code</a></em> for <code>getenv</code> you'll see that all arguments must be of type <code>str</code>:</p>
<pre><code>def getenv(key, default=None):
    """Get an environment variable, return None if it doesn't exist.
    The optional second argument can specify an alternate default.
    key, default and the result are str."""
    return environ.get(key, default)
</code></pre>
<p>Changing your calls to:</p>
<pre><code>os.getenv("PORT", "8080") 
os.getenv("IP", "0.0.0.0")
</code></pre>
<p>Should work and you should have no problem using them.</p>
</div>
<span class="comment-copy">Apologies for the formatting!</span>
<span class="comment-copy">Try <code>os.getenv("IP", "0.0.0.0")</code></span>
<span class="comment-copy">Now is says <code>NameError: name 'PORT' is not defined</code></span>
<span class="comment-copy">Same as with IP, <code>os.getenv("PORT", 8080)</code></span>
<span class="comment-copy">I have the exact same issue. I've tried using strings as well. Still, always the same error.</span>
